--- a/01_shiro_authentication/pom.xml
+++ b/01_shiro_authentication/pom.xml
@@ -58,6 +58,11 @@
       <version>1.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>easyexcel</artifactId>
+      <version>1.1.0</version>
+    </dependency>
 
 
   </dependencies>
