--- a/01_shiro_authentication/src/resouces/config3.properties
+++ b/01_shiro_authentication/src/resouces/config3.properties
@@ -1,12 +1,17 @@
 #配置解析的文件路径
-readerFilePath:G:/springBoot/ShiroAndSso/01_shiro_authentication/src/resouces/JHQ.BCF2
+readerFilePath:G:/springBoot/ShiroAndSso/01_shiro_authentication/src/resouces/JHQ.BAS
 #配置输出的文件路径(支持txt文件和excel文件(.xlsx结尾))E:/a.xlsx
-writerFilePath:E:/c.txt
+writerFilePath:E:/e3.txt
+#设置数据分组格式(方式一:format1,方式二:format2)
+#分组方式一格式： layer -1 layer -2 layer -3... 为一组
+#分组方式二格式： layer -0 layer -0 layer -0... 为一组
+groupFormat:format1
 #配置每层行数(默认90行)
 lineSum:90
 #配置每层列数(默认188列)
 columnSum:188
-
+#配置读取文件的每行数据有多少列数据(如 10,8,40,28 默认为10,8)
+columnNumbers:10,8,40,28
 
 
 
